Fixed card icon/text alignment

--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: space-between;
   width: 10em;
   background: #343237;
   margin: 2em;
